default/speedtest.Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: speedtest
  name: speedtest
spec:
  selector:
    matchLabels:
      app: speedtest
  template:
    metadata:
      labels:
        app: speedtest
    spec:
      containers:
        - env:
           - name: SPEEDTEST_PORT
             value: "9798"
          name: speedtest
          image: docker.io/miguelndecarvalho/speedtest-exporter:v3.5.4
          ports:
            - name: http
              containerPort: 9798
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL", "NET_RAW"]
            runAsUser: 1001
          volumeMounts:
            - mountPath: /.config
              name: config
      securityContext:
        runAsNonRoot: true
      volumes:
        - name: config
          emptyDir:
            sizeLimit: 50Mi
